force-app/main/default/objects/RV_LeadTime_BaseLead__c/RV_LeadTime_BaseLead__c.object-meta.xml
<CustomObject>
    <label>RV_LeadTime_BaseLead</label>
    <nameField>
        <label>RV_LeadTime_BaseLead</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RV_LeadTime_BaseLead</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>