force-app/main/default/objects/RV_LeadTime_BaseLead__c/fields/DrillingCode__c.field-meta.xml
<CustomField>
    <fullName>DrillingCode__c</fullName>
    <label>DrillingCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>