force-app/main/default/objects/RV_LeadTime_BaseLead__c/fields/SubModel__c.field-meta.xml
<CustomField>
    <fullName>SubModel__c</fullName>
    <label>SubModel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>