force-app/main/default/objects/RV_LeadTime_BaseLead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SubModel__c</columns>
    <columns>SizeCode__c</columns>
    <columns>DrillingCode__c</columns>
    <columns>BodyMatlCode__c</columns>
    <columns>Schedule__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>